# Physics-Informed-Neural-Networks-for-Collective-Cancer-Invasion

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  config.json  controller.py  main.py  pyproject.toml  requirements.txt
.githooks/: stage_modified_files.bat
results/: model_weights.pth  predictions.csv  predictions.npz  results_summary.json
scripts/: analyze_results.py  data_loader.py  models.py  trainer.py  utils.py  visualization.py
