[project]
name = "pinn-cancer-invasion"
version = "1.0.0"
description = "Physics-Informed Neural Networks for Collective Cancer Invasion Modeling"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "torchaudio>=2.9.0",
    "neuraloperator>=2.0.0",
    "numpy>=2.3.2",
    "scipy>=1.16.0",
    "pandas>=2.0.0",
    "matplotlib>=3.10.3",
    "pillow>=10.0.0",
    "tensorly>=0.9.0",
    "tensorly-torch>=0.5.0",
    "opt-einsum>=3.4.0",
    "h5py>=3.15.0",
    "PyYAML>=6.0.0",
    "ruamel.yaml>=0.18.0",
    "pydantic>=2.12.0",
    "zencfg>=0.6.0",
    "configmypy>=0.2.0",
    "wandb>=0.22.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["plots*", "results*", "scripts*"]
